--- a/resume/tool bar/toolbar.html
+++ b/resume/tool bar/toolbar.html
@@ -9,7 +9,7 @@
 <body>
     <div class="toolbar">
         <div>
-            <a href="../resume.html" class="Home-link">Home</a>
+            <a href="../index.html" class="Home-link">Home</a>
             <a href="../portfolio/portfolio.html" class="toolbar-link">Portfolio</a>
         </div>
         <div>
